--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,8 @@
+@import "@gouvfr/dsfr/dist/dsfr.min.css";
+@import "@gouvfr/dsfr/dist/utility/icons/icons.min.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
